--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
   "author": "Puyodead1",
   "license": "MIT",
   "dependencies": {
+    "@sapphire/discord.js-utilities": "^3.0.0-next.c4f992f5.0",
+    "@types/sqlite3": "^3.1.7",
     "discord.js": "^13.1.0",
-    "node-fetch": "^2.6.1"
+    "mongodb": "^4.1.0",
+    "node-fetch": "^2.6.1",
+    "sqlite3": "^5.0.2"
   },
   "devDependencies": {
     "@types/node": "^16.6.1",
