--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
   "license": "MIT",
   "dependencies": {
     "@sapphire/discord.js-utilities": "^4.1.0",
-    "@types/sqlite3": "^3.1.7",
     "discord.js": "^13.1.0",
     "mongodb": "^4.1.0",
     "node-fetch": "^2.6.1",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^5.0.2",
+    "typescript": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^16.6.1",
-    "@types/node-fetch": "^2.5.12"
+    "@types/node-fetch": "^2.5.12",
+    "@types/sqlite3": "^3.1.7"
   }
 }
