--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
     "@types/node": "^16.6.1",
     "@types/node-fetch": "^2.5.12",
     "@types/sqlite3": "^3.1.7"
+  },
+  "engines": {
+    "node": "16.x",
+    "yarn": "1.22.17",
+    "npm": "8.1.4"
   }
 }
