--- a/package.json
+++ b/package.json
@@ -11,20 +11,20 @@
   "author": "Puyodead1",
   "license": "MIT",
   "dependencies": {
-    "@sapphire/discord.js-utilities": "^4.1.0",
-    "discord.js": "^13.1.0",
-    "mongodb": "^4.1.0",
-    "node-fetch": "^2.6.1",
-    "sqlite3": "^5.0.2",
-    "typescript": "^4.5.2"
+    "@sapphire/discord.js-utilities": "^5.1.2",
+    "discord.js": "^14.7.1",
+    "mongodb": "^4.13.0",
+    "node-fetch": "^3.3.0",
+    "sqlite3": "^5.1.4",
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
-    "@types/node": "^16.6.1",
-    "@types/node-fetch": "^2.5.12",
-    "@types/sqlite3": "^3.1.7"
+    "@types/node": "^18.11.18",
+    "@types/node-fetch": "^2.6.2",
+    "@types/sqlite3": "^3.1.8"
   },
   "engines": {
-    "node": "16.x",
+    "node": ">=16.x",
     "yarn": "1.22.17",
     "npm": "8.1.4"
   }
