--- a/package.json
+++ b/package.json
@@ -12,20 +12,17 @@
   "license": "MIT",
   "dependencies": {
     "@sapphire/discord.js-utilities": "^5.1.2",
+    "@sapphire/fetch": "^2.4.1",
     "discord.js": "^14.7.1",
-    "mongodb": "^4.13.0",
-    "node-fetch": "^3.3.0",
+    "dotenv": "^16.0.3",
+    "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.1.4",
+    "typeorm": "^0.3.11",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
     "@types/node-fetch": "^2.6.2",
     "@types/sqlite3": "^3.1.8"
-  },
-  "engines": {
-    "node": ">=16.x",
-    "yarn": "1.22.17",
-    "npm": "8.1.4"
   }
 }
